# erdos-problems

./: .gitignore  .npmignore  AGENT_INTEGRATION.md  CONTRIBUTING.md  PROTOCOL.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: README.md  UPSTREAM_DIFF.md
docs/: DEEP_RESEARCH_BUNDLE_SPEC.md  (+7 more)
research/frontier-engine/: .npmignore  ARCHITECTURE.md  ERDOS_ADAPTER.md  HARDWARE.md  NAMING.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
research/frontier-engine/experiments/: README.md
research/frontier-engine/experiments/m8-sat-rail/: ARTIFACT_SCHEMA.md  CANDIDATE_SCHEMA.md  README.md  SAT_BUNDLE_SCHEMA.md  benchmark.json  reference_m8_lower_bound_45.json  windows_rtx4090_search_profile.json
research/frontier-engine/experiments/p848-anchor-ladder/: BUNDLE_SCHEMA.md  FRONTIER_STATE.json  README.md  batched_smoke_profile.json  benchmark.json  brev_h100_search_profile.json  known_failure_packets.json  observed_continuations.json  windows_rtx4090_search_profile.json
research/frontier-engine/hardware/: legacy_multi_gpu_reference.json  windows_rtx4090.json
research/frontier-engine/src/frontier_engine/: __init__.py  artifacts.py  cli.py  contracts.py  frontier.py  generator.py  inventory.py  lanes.py  m8_backends.py  m8_search.py  m8_warm_start.py  p848_anchor_search.py  p848_bundle.py  p848_theorem_bridge.py  p848_torch_backend.py  pipeline.py  plans.py  rarity.py  runtime.py  sampler.py  surrogate.py  verifier.py  verifier_bundle.py
research/frontier-engine/src/frontier_engine/benchmarks/: __init__.py  m8_sat_rail.py
(+1047 files in other folders)
